feat: support for gitlab push hooks
