# api/docs/swagger.json
@@ -80,6 +80,65 @@
                 }
             }
         },
+        "/api/v1/asana/push": {
+            "post": {
+                "description": "Endpoint to set last commit url to custom field in asana task, passed via commit message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "gitlab"
+                ],
+                "summary": "Gitlab push request hook",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Gitlab token",
+                        "name": "X-Gitlab-Token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Gitlab push request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entities.GitlabPushRequestHook"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/gitlab.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gitlab.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/gitlab.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gitlab.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/ping": {
             "get": {
                 "consumes": [
@@ -103,6 +162,53 @@
         }
     },
     "definitions": {
+        "entities.Commit": {
+            "type": "object",
+            "properties": {
+                "added": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "author": {
+                    "type": "object",
+                    "properties": {
+                        "email": {
+                            "type": "string"
+                        },
+                        "name": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "modified": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "removed": {
+                    "type": "array",
+                    "items": {}
+                },
+                "timestamp": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "entities.GitlabMergeRequestHook": {
             "type": "object",
             "properties": {
@@ -453,6 +559,130 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        },
+        "entities.GitlabPushRequestHook": {
+            "type": "object",
+            "properties": {
+                "after": {
+                    "type": "string"
+                },
+                "before": {
+                    "type": "string"
+                },
+                "checkout_sha": {
+                    "type": "string"
+                },
+                "commits": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Commit"
+                    }
+                },
+                "event_name": {
+                    "type": "string"
+                },
+                "object_kind": {
+                    "type": "string"
+                },
+                "project": {
+                    "type": "object",
+                    "properties": {
+                        "avatar_url": {},
+                        "default_branch": {
+                            "type": "string"
+                        },
+                        "description": {
+                            "type": "string"
+                        },
+                        "git_http_url": {
+                            "type": "string"
+                        },
+                        "git_ssh_url": {
+                            "type": "string"
+                        },
+                        "homepage": {
+                            "type": "string"
+                        },
+                        "http_url": {
+                            "type": "string"
+                        },
+                        "id": {
+                            "type": "integer"
+                        },
+                        "name": {
+                            "type": "string"
+                        },
+                        "namespace": {
+                            "type": "string"
+                        },
+                        "path_with_namespace": {
+                            "type": "string"
+                        },
+                        "ssh_url": {
+                            "type": "string"
+                        },
+                        "url": {
+                            "type": "string"
+                        },
+                        "visibility_level": {
+                            "type": "integer"
+                        },
+                        "web_url": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "project_id": {
+                    "type": "integer"
+                },
+                "ref": {
+                    "type": "string"
+                },
+                "repository": {
+                    "type": "object",
+                    "properties": {
+                        "description": {
+                            "type": "string"
+                        },
+                        "git_http_url": {
+                            "type": "string"
+                        },
+                        "git_ssh_url": {
+                            "type": "string"
+                        },
+                        "homepage": {
+                            "type": "string"
+                        },
+                        "name": {
+                            "type": "string"
+                        },
+                        "url": {
+                            "type": "string"
+                        },
+                        "visibility_level": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "total_commits_count": {
+                    "type": "integer"
+                },
+                "user_avatar": {
+                    "type": "string"
+                },
+                "user_email": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "user_name": {
+                    "type": "string"
+                },
+                "user_username": {
+                    "type": "string"
                 }
             }
         },
