# api/entities/gitlab.go
@@ -1,5 +1,7 @@
 package entities
 
+import "time"
+
 // GitlabMergeRequestHook represents a Gitlab response model when a merge request is created or updated
 type GitlabMergeRequestHook struct {
 	ObjectKind GitlabRequestObjectName `json:"object_kind"`
@@ -135,12 +137,73 @@ type GitlabMergeRequestHook struct {
 	} `json:"repository"`
 }
 
+type GitlabPushRequestHook struct {
+	ObjectKind   GitlabRequestObjectName `json:"object_kind"`
+	EventName    string                  `json:"event_name"`
+	Before       string                  `json:"before"`
+	After        string                  `json:"after"`
+	Ref          string                  `json:"ref"`
+	CheckoutSha  string                  `json:"checkout_sha"`
+	UserID       int                     `json:"user_id"`
+	UserName     string                  `json:"user_name"`
+	UserUsername string                  `json:"user_username"`
+	UserEmail    string                  `json:"user_email"`
+	UserAvatar   string                  `json:"user_avatar"`
+	ProjectID    int                     `json:"project_id"`
+	Project      struct {
+		ID                int         `json:"id"`
+		Name              string      `json:"name"`
+		Description       string      `json:"description"`
+		WebURL            string      `json:"web_url"`
+		AvatarURL         interface{} `json:"avatar_url"`
+		GitSSHURL         string      `json:"git_ssh_url"`
+		GitHTTPURL        string      `json:"git_http_url"`
+		Namespace         string      `json:"namespace"`
+		VisibilityLevel   int         `json:"visibility_level"`
+		PathWithNamespace string      `json:"path_with_namespace"`
+		DefaultBranch     string      `json:"default_branch"`
+		Homepage          string      `json:"homepage"`
+		URL               string      `json:"url"`
+		SSHURL            string      `json:"ssh_url"`
+		HTTPURL           string      `json:"http_url"`
+	} `json:"project"`
+	Repository struct {
+		Name            string `json:"name"`
+		URL             string `json:"url"`
+		Description     string `json:"description"`
+		Homepage        string `json:"homepage"`
+		GitHTTPURL      string `json:"git_http_url"`
+		GitSSHURL       string `json:"git_ssh_url"`
+		VisibilityLevel int    `json:"visibility_level"`
+	} `json:"repository"`
+	Commits           []Commit `json:"commits"`
+	TotalCommitsCount int      `json:"total_commits_count"`
+}
+
+type Commit struct {
+	ID        string    `json:"id"`
+	Message   string    `json:"message"`
+	Title     string    `json:"title"`
+	Timestamp time.Time `json:"timestamp"`
+	URL       string    `json:"url"`
+	Author    struct {
+		Name  string `json:"name"`
+		Email string `json:"email"`
+	} `json:"author"`
+	Added    []string      `json:"added"`
+	Modified []string      `json:"modified"`
+	Removed  []interface{} `json:"removed"`
+}
+
 // GitlabRequestObjectName represents the object name of a Gitlab request
 type GitlabRequestObjectName string
 
 const (
 	// GitlabRequestObjectNameMergeRequest represents a merge request object name
 	GitlabRequestObjectNameMergeRequest GitlabRequestObjectName = "merge_request"
+
+	// GitlabRequestObjectNamePush represents a push request object name
+	GitlabRequestObjectNamePush GitlabRequestObjectName = "push"
 )
 
 const (
